--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  row-gap: 2rem;
   font-size: calc(10px + 2vmin);
+}
+
+.hgt {
+  align-items: flex-start;
+  min-width: 80vw;
+  min-height: 50vh;
+}
+
+h1 {
+  font-weight: 100;
+  min-width: 80vw;
+}
+
+input {
+  background-color: black;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid white;
+  min-width: 60vw;
+  padding: 0.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  background-color: white;
+  color: black;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
 }
